# cognito-user-reader

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Cargo.toml  LICENSE.md  README.md
.github/workflows/: build.yaml  release.yaml  rust.yml
.travis/: deploy.sh
cognito_user_reader/: Cargo.toml
cognito_user_reader/src/: cli.rs  main.rs
cognito_user_reader_lib/: Cargo.toml
cognito_user_reader_lib/src/: cognito.rs  emojis.rs  lib.rs
src/: cognito.rs  emojis.rs  lib.rs  main.rs  models.rs
src/cli/: cli.rs  main.rs
