[package]
name = "cognito-user-reader"
description = "Utility to retrieve all users in a specific AWS user pool"
version = "0.1.0"
authors = ["Roberto Huertas <roberto.huertas@outlook.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/robertohuertasm/cognito-user-reader"
readme = "README.md"
keywords = ["cli", "aws", "cognito"]
categories = ["web-programming::http-server", "network-programming"]

exclude = [
  ".travis/*",
  ".travis.yml",
  ".pre-commit-config.yaml"
]

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "robertohuertasm/cognito-user-reader", branch = "master" }

[[bin]]
name = "cur"
path = "./src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.0"
console = "0.8.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.40"