[package]
name = "cognito-user-reader"
description = "Utility to retrieve all users in a specific AWS user pool"
version = "1.0.3"
authors = ["Roberto Huertas <roberto.huertas@outlook.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/robertohuertasm/cognito-user-reader"
readme = "README.md"
keywords = ["cli", "aws", "cognito"]
categories = ["web-programming::http-server", "network-programming"]

exclude = [
  ".github/*",
  ".pre-commit-config.yaml"
]

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "cur"
path = "./src/cli/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version  = "1.7", features = ["macros", "rt-multi-thread", "fs"] }
rusoto_core = {version = "0.46" }
rusoto_cognito_idp = { version = "0.46" }
structopt = "0.3.12"
console = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
