[package]
name = "cognito-user-reader"
description = "Utility to retrieve all users in a specific AWS user pool"
version = "0.5.0"
authors = ["Roberto Huertas <roberto.huertas@outlook.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/robertohuertasm/cognito-user-reader"
readme = "../README.md"
keywords = ["cli", "aws", "cognito"]
categories = ["web-programming::http-server", "network-programming"]

exclude = [
  ".github/*",
  ".pre-commit-config.yaml"
]

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "cur"
path = "./src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cognito_user_reader_lib = { path = "../cognito_user_reader_lib", version = "0.5.0" }
structopt = "0.3.9"
console = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.48"
chrono = { version = "0.4.10", features = ["serde"] }
