[package]
name = "cognito_user_reader_lib"
description = "Library to get users from Cognito. See cognito-user-reader crate."
version = "0.5.0"
authors = ["Roberto Huertas <roberto.huertas@outlook.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/robertohuertasm/cognito-user-reader"
keywords = ["aws", "cognito"]
categories = ["network-programming"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.48"
chrono = { version = "0.4.10", features = ["serde"] }
console = "0.9.2"
